ros/log/build_2025-03-05_17-52-18/uwb/stdout_stderr.log
running egg_info
writing ../../build/uwb/uwb.egg-info/PKG-INFO
writing dependency_links to ../../build/uwb/uwb.egg-info/dependency_links.txt
writing entry points to ../../build/uwb/uwb.egg-info/entry_points.txt
writing requirements to ../../build/uwb/uwb.egg-info/requires.txt
writing top-level names to ../../build/uwb/uwb.egg-info/top_level.txt
reading manifest file '../../build/uwb/uwb.egg-info/SOURCES.txt'
writing manifest file '../../build/uwb/uwb.egg-info/SOURCES.txt'
running build
running build_py
copying uwb/uwb.py -> /workspace/safmc_uwb/ros/build/uwb/build/lib/uwb
copying uwb/uwb_5v8.py -> /workspace/safmc_uwb/ros/build/uwb/build/lib/uwb
running install
running install_lib
copying /workspace/safmc_uwb/ros/build/uwb/build/lib/uwb/uwb.py -> /workspace/safmc_uwb/ros/install/uwb/lib/python3.10/site-packages/uwb
copying /workspace/safmc_uwb/ros/build/uwb/build/lib/uwb/uwb_5v8.py -> /workspace/safmc_uwb/ros/install/uwb/lib/python3.10/site-packages/uwb
byte-compiling /workspace/safmc_uwb/ros/install/uwb/lib/python3.10/site-packages/uwb/uwb.py to uwb.cpython-310.pyc
byte-compiling /workspace/safmc_uwb/ros/install/uwb/lib/python3.10/site-packages/uwb/uwb_5v8.py to uwb_5v8.cpython-310.pyc
  File "/workspace/safmc_uwb/ros/install/uwb/lib/python3.10/site-packages/uwb/uwb.py", line 412
    break
    ^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
  File "/workspace/safmc_uwb/ros/install/uwb/lib/python3.10/site-packages/uwb/uwb_5v8.py", line 412
    break
    ^^^^^
SyntaxError: invalid syntax

removing '/workspace/safmc_uwb/ros/install/uwb/lib/python3.10/site-packages/uwb-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/uwb/uwb.egg-info to /workspace/safmc_uwb/ros/install/uwb/lib/python3.10/site-packages/uwb-0.0.0-py3.10.egg-info
running install_scripts
Installing uwb script to /workspace/safmc_uwb/ros/install/uwb/lib/uwb
writing list of installed files to '/workspace/safmc_uwb/ros/build/uwb/install.log'
